--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,29 @@
                     </coverage>
                 </configuration>
             </plugin>
-            
+          <plugin>
+    <groupId>org.mule.tools.maven</groupId>
+    <artifactId>mule-maven-plugin</artifactId>
+    <version>2.0</version>
+    <configuration>
+        <deploymentType>cloudhub</deploymentType>
+        <!-- muleVersion is the runtime version as it appears on the CloudHub interface -->
+        <muleVersion>3.9.0</muleVersion>
+        <username>Naimisha</username>
+        <password>Pin500081TS</password>
+        <redeploy>true</redeploy>
+        <environment>Sandbox</environment>
+    </configuration>
+    <executions>
+        <execution>
+            <id>deploy</id>
+            <phase>deploy</phase>
+            <goals>
+                <goal>deploy</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>  
             
         </plugins>
         
