--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
             </plugin>
           <plugin>
     <groupId>org.mule.tools.maven</groupId>
-    <artifactId>maventest-pinna</artifactId>
+    <artifactId>mule-maven-plugin</artifactId>
     <version>2.0</version>
     <configuration>
         <deploymentType>cloudhub</deploymentType>
